add favicon, meta, title for img

--- a/css/media.css
+++ b/css/media.css
@@ -156,6 +156,10 @@
         display: none;
     }
 
+    .header__auth.mob-menu__auth {
+        display: flex;
+    }
+
     /* prime */
     .prime {
         padding: 68px 32px 68px 32px;
